[gd_scene load_steps=27 format=4 uid="uid://5d2a6plu8tla"]

[ext_resource type="Script" uid="uid://db4u2qknaw8h5" path="res://Arquivos/Scripts/level_4.gd" id="1_p7dx3"]
[ext_resource type="TileSet" uid="uid://ce8257msoe1gc" path="res://Arquivos/Scenes/Level2/resources/level_2_tileset.tres" id="1_vwha4"]
[ext_resource type="Texture2D" uid="uid://cxp1bxxxltr0y" path="res://Arquivos/Assets/Sprites/Level2/BG1.png" id="2_hty5q"]
[ext_resource type="Texture2D" uid="uid://cgodm73rfvr20" path="res://Arquivos/Assets/Sprites/Level2/BG2.png" id="3_10ool"]
[ext_resource type="PackedScene" uid="uid://eien1oa67xn3" path="res://Arquivos/Scenes/Leve1/porta.tscn" id="3_d23nn"]
[ext_resource type="Texture2D" uid="uid://41w8l2h0qlke" path="res://Arquivos/Assets/Sprites/Level2/BG3.png" id="4_lbqu7"]
[ext_resource type="PackedScene" uid="uid://dig7kwaei7ttm" path="res://Arquivos/Scenes/Level2/plataforma.tscn" id="5_10ool"]
[ext_resource type="PackedScene" uid="uid://crnfawxu5a2v8" path="res://Arquivos/Scenes/Level2/checkpoint.tscn" id="6_lbqu7"]
[ext_resource type="PackedScene" uid="uid://cu1ove0tumwj2" path="res://Arquivos/Scenes/Level2/button.tscn" id="6_pcseb"]
[ext_resource type="PackedScene" uid="uid://c127hlevjv4yr" path="res://Arquivos/Scenes/Level2/death_zone.tscn" id="7_1mpln"]
[ext_resource type="PackedScene" uid="uid://c25xyp2blyrub" path="res://Arquivos/Scenes/Level2/button2.tscn" id="7_tls5i"]
[ext_resource type="PackedScene" uid="uid://do1xd5k0sxjux" path="res://Arquivos/Scenes/Level2/player.tscn" id="8_ln7h6"]
[ext_resource type="AudioStream" uid="uid://4we7uaqevosm" path="res://Arquivos/Assets/Audio/Music Level 3.wav" id="12_2jl5j"]

[sub_resource type="Animation" id="Animation_tls5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(374, -72)]
}

[sub_resource type="Animation" id="Animation_p7dx3"]
resource_name = "move"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(374, -72), Vector2(500, -83)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jl5j"]
_data = {
&"RESET": SubResource("Animation_tls5i"),
&"move": SubResource("Animation_p7dx3")
}

[sub_resource type="Animation" id="Animation_x8ti7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(691, -89)]
}

[sub_resource type="Animation" id="Animation_d23nn"]
resource_name = "move"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(691, -89), Vector2(554, -83)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2quh"]
_data = {
&"RESET": SubResource("Animation_x8ti7"),
&"move": SubResource("Animation_d23nn")
}

[sub_resource type="Animation" id="Animation_2ragy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(930, -88)]
}

[sub_resource type="Animation" id="Animation_01pxa"]
resource_name = "move"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(930, -88), Vector2(1451, -88)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_078h2"]
_data = {
&"RESET": SubResource("Animation_2ragy"),
&"move": SubResource("Animation_01pxa")
}

[sub_resource type="Animation" id="Animation_e2quh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1717, -88)]
}

[sub_resource type="Animation" id="Animation_2jl5j"]
resource_name = "move"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1717, -88), Vector2(2509, -88)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01pxa"]
_data = {
&"RESET": SubResource("Animation_e2quh"),
&"move": SubResource("Animation_2jl5j")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ln7h6"]
distance = -101.0

[node name="Level4" type="Node2D"]
script = ExtResource("1_p7dx3")

[node name="Background" type="Node" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Background"]
position = Vector2(-31, -73)
tile_map_data = PackedByteArray("AABFAP3/AQAAAAAAAABGAP3/AQABAAAAAABHAP3/AQABAAAAAABIAP3/AQADAAIAAABKAPz/AQADAAIAAABMAPr/AQABAAAAAABIAPz/AQABAAAAAABJAPz/AQABAAAAAABHAPz/AQAAAAAAAABJAPr/AQAAAAAAAABKAPr/AQABAAAAAABLAPr/AQABAAAAAABJAPv/AQAFAAAAAABKAPv/AQAFAAAAAABLAPv/AQAFAAAAAABMAPv/AQAFAAAAAABJAP3/AQAFAAAAAABKAP3/AQAFAAAAAABLAPz/AQAFAAAAAABMAPz/AQAEAAAAAABLAP3/AQAFAAAAAABMAP3/AQAFAAAAAABNAPv/AQAFAAAAAABNAPz/AQABAAAAAABNAP3/AQAEAAIAAABNAPr/AQACAAAAAABOAPz/AQABAAAAAABPAPz/AQACAAAAAABOAP3/AQABAAAAAABPAP3/AQABAAAAAABQAP3/AQABAAAAAABRAP3/AQACAAAAAAA=")
tile_set = ExtResource("1_vwha4")

[node name="TileMapLayer2" type="TileMapLayer" parent="Background"]
position = Vector2(-31, -73)
tile_map_data = PackedByteArray("AAACAOr/AQAFAAAAAAACAOv/AQAFAAAAAAACAOz/AQAFAAAAAAACAO3/AQAFAAAAAAACAO7/AQAFAAAAAAACAO//AQAFAAAAAAACAPD/AQAFAAAAAAACAPH/AQAFAAAAAAACAPL/AQAFAAAAAAACAPP/AQAFAAAAAAACAPT/AQAFAAAAAAACAPX/AQAFAAAAAAACAPb/AQAFAAAAAAACAPf/AQAFAAAAAAACAPj/AQAFAAAAAAACAPn/AQAFAAAAAAACAPr/AQAFAAAAAAACAPv/AQAFAAAAAAACAPz/AQAFAAAAAAACAP3/AQAFAAAAAAACAP7/AQAFAAAAAAACAP//AQAFAAAAAAACAAAAAQAFAAAAAAACAAEAAQAFAAAAAAACAAIAAQAFAAAAAAACAAMAAQAFAAAAAAADAOr/AQAFAAAAAAADAOv/AQAFAAAAAAADAOz/AQAFAAAAAAADAO3/AQAFAAAAAAADAO7/AQAFAAAAAAADAO//AQAFAAAAAAADAPD/AQAFAAAAAAADAPH/AQAFAAAAAAADAPL/AQAFAAAAAAADAPP/AQAFAAAAAAADAPT/AQAFAAAAAAADAPX/AQAFAAAAAAADAPb/AQAFAAAAAAADAPf/AQAFAAAAAAADAPj/AQAFAAAAAAADAPn/AQAFAAAAAAADAPr/AQAFAAAAAAADAPv/AQAFAAAAAAADAPz/AQAFAAAAAAADAP3/AQAFAAAAAAADAP7/AQAFAAAAAAADAP//AQAFAAAAAAADAAAAAQAFAAAAAAADAAEAAQAFAAAAAAADAAIAAQAFAAAAAAADAAMAAQAFAAAAAAAEAOr/AQAFAAAAAAAEAOv/AQAFAAAAAAAEAOz/AQAFAAAAAAAEAO3/AQAFAAAAAAAEAO7/AQAFAAAAAAAEAO//AQAFAAAAAAAEAPD/AQAFAAAAAAAEAPH/AQAFAAAAAAAEAPL/AQAFAAAAAAAEAPP/AQAFAAAAAAAEAPT/AQAFAAAAAAAEAPX/AQAFAAAAAAAEAPb/AQAFAAAAAAAEAPf/AQAFAAAAAAAEAPj/AQAFAAAAAAAEAPn/AQAFAAAAAAAEAPr/AQAFAAAAAAAEAPv/AQAFAAAAAAAEAPz/AQAFAAAAAAAEAP3/AQAFAAAAAAAEAP7/AQAFAAAAAAAEAP//AQAFAAAAAAAEAAAAAQAFAAAAAAAEAAEAAQAFAAAAAAAEAAIAAQAFAAAAAAAEAAMAAQAFAAAAAAAFAOr/AQAFAAAAAAAFAOv/AQAFAAAAAAAFAOz/AQAFAAAAAAAFAO3/AQAFAAAAAAAFAO7/AQAFAAAAAAAFAO//AQAFAAAAAAAFAPD/AQAFAAAAAAAFAPH/AQAFAAAAAAAFAPL/AQAFAAAAAAAFAPP/AQAFAAAAAAAFAPT/AQAFAAAAAAAFAPX/AQAFAAAAAAAFAPb/AQAFAAAAAAAFAPf/AQAFAAAAAAAFAPj/AQAFAAAAAAAFAPn/AQAFAAAAAAAFAPr/AQAFAAAAAAAFAPv/AQAFAAAAAAAFAPz/AQAFAAAAAAAFAP3/AQAFAAAAAAAFAP7/AQAFAAAAAAAFAP//AQAFAAAAAAAFAAAAAQAFAAAAAAAFAAEAAQAFAAAAAAAFAAIAAQAFAAAAAAAFAAMAAQAFAAAAAAAGAOr/AQAFAAAAAAAGAOv/AQAFAAAAAAAGAOz/AQAFAAAAAAAGAO3/AQAFAAAAAAAGAO7/AQAFAAAAAAAGAO//AQAFAAAAAAAGAPD/AQAFAAAAAAAGAPH/AQAFAAAAAAAGAPL/AQAFAAAAAAAGAPP/AQAFAAAAAAAGAPT/AQAFAAAAAAAGAPX/AQAFAAAAAAAGAPb/AQAFAAAAAAAGAPf/AQAFAAAAAAAGAPj/AQAFAAAAAAAGAPn/AQAFAAAAAAAGAPr/AQAFAAAAAAAGAPv/AQAFAAAAAAAGAPz/AQAFAAAAAAAGAP3/AQAFAAAAAAAGAP7/AQAFAAAAAAAGAP//AQAFAAAAAAAGAAAAAQAFAAAAAAAGAAEAAQAFAAAAAAAGAAIAAQAFAAAAAAAGAAMAAQAFAAAAAAAHAOr/AQAFAAAAAAAHAOv/AQAFAAAAAAAHAOz/AQAFAAAAAAAHAO3/AQAFAAAAAAAHAO7/AQAFAAAAAAAHAO//AQAFAAAAAAAHAPD/AQAFAAAAAAAHAPH/AQAFAAAAAAAHAPL/AQAFAAAAAAAHAPP/AQAFAAAAAAAHAPT/AQAFAAAAAAAHAPX/AQAFAAAAAAAHAPb/AQAFAAAAAAAHAPf/AQAFAAAAAAAHAPj/AQAFAAAAAAAHAPn/AQAFAAAAAAAHAPr/AQAFAAAAAAAHAPv/AQAFAAAAAAAHAPz/AQAFAAAAAAAHAP3/AQAFAAAAAAAHAP7/AQAFAAAAAAAHAP//AQAFAAAAAAAHAAAAAQAFAAAAAAAHAAEAAQAFAAAAAAAHAAIAAQAFAAAAAAAHAAMAAQAFAAAAAAD9/+r/AQAFAAAAAAD9/+v/AQAFAAAAAAD9/+z/AQAFAAAAAAD9/+3/AQAFAAAAAAD9/+7/AQAFAAAAAAD9/+//AQAFAAAAAAD9//D/AQAFAAAAAAD9//H/AQAFAAAAAAD9//L/AQAFAAAAAAD9//P/AQAFAAAAAAD9//T/AQAFAAAAAAD9//X/AQAFAAAAAAD9//b/AQAFAAAAAAD9//f/AQAFAAAAAAD9//j/AQAFAAAAAAD9//n/AQAFAAAAAAD9//r/AQAFAAAAAAD9//v/AQAFAAAAAAD9//z/AQAFAAAAAAD9//3/AQAFAAAAAAD9//7/AQAFAAAAAAD9////AQAFAAAAAAD9/wAAAQAFAAAAAAD9/wEAAQAFAAAAAAD9/wIAAQAFAAAAAAD9/wMAAQAFAAAAAAD+/+r/AQAFAAAAAAD+/+v/AQAFAAAAAAD+/+z/AQAFAAAAAAD+/+3/AQAFAAAAAAD+/+7/AQAFAAAAAAD+/+//AQAFAAAAAAD+//D/AQAFAAAAAAD+//H/AQAFAAAAAAD+//L/AQAFAAAAAAD+//P/AQAFAAAAAAD+//T/AQAFAAAAAAD+//X/AQAFAAAAAAD+//b/AQAFAAAAAAD+//f/AQAFAAAAAAD+//j/AQAFAAAAAAD+//n/AQAFAAAAAAD+//r/AQAFAAAAAAD+//v/AQAFAAAAAAD+//z/AQAFAAAAAAD+//3/AQAFAAAAAAD+//7/AQAFAAAAAAD+////AQAFAAAAAAD+/wAAAQAFAAAAAAD+/wEAAQAFAAAAAAD+/wIAAQAFAAAAAAD+/wMAAQAFAAAAAAD//+r/AQAFAAAAAAD//+v/AQAFAAAAAAD//+z/AQAFAAAAAAD//+3/AQAFAAAAAAD//+7/AQAFAAAAAAD//+//AQAFAAAAAAD///D/AQAFAAAAAAD///H/AQAFAAAAAAD///L/AQAFAAAAAAD///P/AQAFAAAAAAD///T/AQAFAAAAAAD///X/AQAFAAAAAAD///b/AQAFAAAAAAD///f/AQAFAAAAAAD///j/AQAFAAAAAAD///n/AQAFAAAAAAD///r/AQAFAAAAAAD///v/AQAFAAAAAAD///z/AQAFAAAAAAD///3/AQAFAAAAAAD///7/AQAFAAAAAAD/////AQAFAAAAAAD//wAAAQAFAAAAAAD//wEAAQAFAAAAAAD//wIAAQAFAAAAAAD//wMAAQAFAAAAAAAAAOr/AQAFAAAAAAAAAOv/AQAFAAAAAAAAAOz/AQAFAAAAAAAAAO3/AQAFAAAAAAAAAO7/AQAFAAAAAAAAAO//AQAFAAAAAAAAAPD/AQAFAAAAAAAAAPH/AQAFAAAAAAAAAPL/AQAFAAAAAAAAAPP/AQAFAAAAAAAAAPT/AQAFAAAAAAAAAPX/AQAFAAAAAAAAAPb/AQAFAAAAAAAAAPf/AQAFAAAAAAAAAPj/AQAFAAAAAAAAAPn/AQAFAAAAAAAAAPr/AQAFAAAAAAAAAPv/AQAFAAAAAAAAAPz/AQAFAAAAAAAAAP3/AQAFAAAAAAAAAP7/AQAFAAAAAAAAAP//AQAFAAAAAAAAAAAAAQAFAAAAAAAAAAEAAQAFAAAAAAAAAAIAAQAFAAAAAAAAAAMAAQAFAAAAAAABAOr/AQAFAAAAAAABAOv/AQAFAAAAAAABAOz/AQAFAAAAAAABAO3/AQAFAAAAAAABAO7/AQAFAAAAAAABAO//AQAFAAAAAAABAPD/AQAFAAAAAAABAPH/AQAFAAAAAAABAPL/AQAFAAAAAAABAPP/AQAFAAAAAAABAPT/AQAFAAAAAAABAPX/AQAFAAAAAAABAPb/AQAFAAAAAAABAPf/AQAFAAAAAAABAPj/AQAFAAAAAAABAPn/AQAFAAAAAAABAPr/AQAFAAAAAAABAPv/AQAFAAAAAAABAPz/AQAFAAAAAAABAP3/AQAFAAAAAAABAP7/AQAFAAAAAAABAP//AQAFAAAAAAABAAAAAQAFAAAAAAABAAEAAQAFAAAAAAABAAIAAQAFAAAAAAABAAMAAQAFAAAAAAAIAP//AQABAAAAAAAJAP//AQABAAAAAAAKAP//AQABAAAAAAALAP//AQABAAAAAAAMAP//AQABAAAAAAANAP//AQABAAAAAAAOAP//AQABAAAAAAAPAP//AQABAAAAAAAQAP//AQABAAAAAAARAP//AQABAAAAAAASAP//AQABAAAAAAATAP//AQABAAAAAAAUAP//AQABAAAAAAAVAP//AQABAAAAAAAWAP//AQACAAAAAAAWAAAAAQACAAEAAAAWAAEAAQACAAEAAAAWAAIAAQACAAEAAAAWAAMAAQACAAIAAAAVAAQAAQACAAIAAAAUAAUAAQACAAIAAAAVAAMAAQAEAAEAAAAUAAQAAQAEAAEAAAAIAAAAAQAFAAAAAAAIAAEAAQAFAAAAAAAIAAIAAQAFAAAAAAAJAAAAAQAFAAAAAAAJAAEAAQAFAAAAAAAJAAIAAQAFAAAAAAAKAAAAAQAFAAAAAAAKAAEAAQAFAAAAAAAKAAIAAQAFAAAAAAALAAAAAQAFAAAAAAALAAEAAQAFAAAAAAALAAIAAQAFAAAAAAAMAAAAAQAFAAAAAAAMAAEAAQAFAAAAAAAMAAIAAQAFAAAAAAANAAAAAQAFAAAAAAANAAEAAQAFAAAAAAANAAIAAQAFAAAAAAAOAAAAAQAFAAAAAAAOAAEAAQAFAAAAAAAOAAIAAQAFAAAAAAAPAAAAAQAFAAAAAAAPAAEAAQAFAAAAAAAPAAIAAQAFAAAAAAAQAAAAAQAFAAAAAAAQAAEAAQAFAAAAAAAQAAIAAQAFAAAAAAARAAAAAQAFAAAAAAARAAEAAQAFAAAAAAARAAIAAQAFAAAAAAASAAAAAQAFAAAAAAASAAEAAQAFAAAAAAASAAIAAQAFAAAAAAATAAAAAQAFAAAAAAATAAEAAQAFAAAAAAATAAIAAQAFAAAAAAAUAAAAAQAFAAAAAAAUAAEAAQAFAAAAAAAUAAIAAQAFAAAAAAAVAAAAAQAFAAAAAAAVAAEAAQAFAAAAAAAVAAIAAQAFAAAAAAAIAAMAAQAFAAAAAAAJAAMAAQAFAAAAAAAKAAMAAQAFAAAAAAALAAMAAQAFAAAAAAAMAAMAAQAFAAAAAAANAAMAAQAFAAAAAAAOAAMAAQAFAAAAAAAPAAMAAQAFAAAAAAAQAAMAAQAFAAAAAAARAAMAAQAFAAAAAAASAAMAAQAFAAAAAAATAAMAAQAFAAAAAAAUAAMAAQAFAAAAAAD9/wQAAQAFAAAAAAD9/wUAAQAFAAAAAAD+/wQAAQAFAAAAAAD+/wUAAQAFAAAAAAD//wQAAQAFAAAAAAD//wUAAQAFAAAAAAAAAAQAAQAFAAAAAAAAAAUAAQAFAAAAAAABAAQAAQAFAAAAAAABAAUAAQAFAAAAAAACAAQAAQAFAAAAAAACAAUAAQAFAAAAAAADAAQAAQAFAAAAAAADAAUAAQAFAAAAAAAEAAQAAQAFAAAAAAAEAAUAAQAFAAAAAAAFAAQAAQAFAAAAAAAFAAUAAQAFAAAAAAAGAAQAAQAFAAAAAAAGAAUAAQAFAAAAAAAHAAQAAQAFAAAAAAAHAAUAAQAFAAAAAAAIAAQAAQAFAAAAAAAIAAUAAQAFAAAAAAAJAAQAAQAFAAAAAAAJAAUAAQAFAAAAAAAKAAQAAQAFAAAAAAAKAAUAAQAFAAAAAAALAAQAAQAFAAAAAAALAAUAAQAFAAAAAAAMAAQAAQAFAAAAAAAMAAUAAQAFAAAAAAANAAQAAQAFAAAAAAANAAUAAQAFAAAAAAAOAAQAAQAFAAAAAAAOAAUAAQAFAAAAAAAPAAQAAQAFAAAAAAAPAAUAAQAFAAAAAAAQAAQAAQAFAAAAAAAQAAUAAQAFAAAAAAARAAQAAQAFAAAAAAARAAUAAQAFAAAAAAASAAQAAQAFAAAAAAASAAUAAQAFAAAAAAATAAQAAQAFAAAAAAATAAUAAQAFAAAAAAAvAP7/AQAAAAAAAAAwAP7/AQABAAAAAAAxAP7/AQABAAAAAAAyAP7/AQABAAAAAAAzAP7/AQABAAAAAAA0AP7/AQABAAAAAAA1AP7/AQABAAAAAAA2AP7/AQABAAAAAAA3AP7/AQABAAAAAAA4AP7/AQABAAAAAAA5AP7/AQACAAAAAAAvAP//AQAAAAEAAAAvAAAAAQAAAAIAAAA5AP//AQACAAEAAAA5AAAAAQACAAIAAAAwAAEAAQAAAAIAAAAxAAIAAQAAAAIAAAAyAAMAAQAAAAIAAAA4AAEAAQACAAIAAAA3AAIAAQACAAIAAAA2AAMAAQACAAIAAAAzAAMAAQABAAIAAAA0AAMAAQABAAIAAAA1AAMAAQABAAIAAAAwAP//AQAFAAAAAAAxAP//AQAFAAAAAAAwAAAAAQAFAAAAAAAxAAAAAQAFAAAAAAAxAAEAAQAFAAAAAAAyAP//AQAFAAAAAAAyAAAAAQAFAAAAAAAyAAEAAQAFAAAAAAAzAP//AQAFAAAAAAAzAAAAAQAFAAAAAAAzAAEAAQAFAAAAAAA0AP//AQAFAAAAAAA0AAAAAQAFAAAAAAA0AAEAAQAFAAAAAAA1AP//AQAFAAAAAAA1AAAAAQAFAAAAAAA1AAEAAQAFAAAAAAA2AP//AQAFAAAAAAA2AAAAAQAFAAAAAAA2AAEAAQAFAAAAAAA3AP//AQAFAAAAAAA3AAAAAQAFAAAAAAA3AAEAAQAFAAAAAAA4AP//AQAFAAAAAAA4AAAAAQAFAAAAAAAyAAIAAQAFAAAAAAAzAAIAAQAFAAAAAAA0AAIAAQAFAAAAAAA1AAIAAQAFAAAAAAA2AAIAAQAFAAAAAABgAP7/AQAAAAAAAABgAP//AQAAAAEAAABgAAAAAQAAAAIAAABhAP7/AQABAAAAAABhAP//AQAFAAAAAABhAAAAAQAFAAAAAABhAAEAAQAAAAIAAABiAP7/AQABAAAAAABiAP//AQAFAAAAAABiAAAAAQAFAAAAAABiAAEAAQAFAAAAAABiAAIAAQAAAAIAAABjAP7/AQABAAAAAABjAP//AQAFAAAAAABjAAAAAQAFAAAAAABjAAEAAQAFAAAAAABjAAIAAQAFAAAAAABjAAMAAQAAAAIAAABkAP7/AQABAAAAAABkAP//AQAFAAAAAABkAAAAAQAFAAAAAABkAAEAAQAFAAAAAABkAAIAAQAFAAAAAABkAAMAAQABAAIAAABlAP7/AQABAAAAAABlAP//AQAFAAAAAABlAAAAAQAFAAAAAABlAAEAAQAFAAAAAABlAAIAAQAFAAAAAABlAAMAAQABAAIAAABmAP7/AQABAAAAAABmAP//AQAFAAAAAABmAAAAAQAFAAAAAABmAAEAAQAFAAAAAABmAAIAAQAFAAAAAABmAAMAAQABAAIAAABnAP7/AQABAAAAAABnAP//AQAFAAAAAABnAAAAAQAFAAAAAABnAAEAAQAFAAAAAABnAAIAAQAFAAAAAABnAAMAAQACAAIAAABoAP7/AQABAAAAAABoAP//AQAFAAAAAABoAAAAAQAFAAAAAABoAAEAAQAFAAAAAABoAAIAAQACAAIAAABpAP7/AQABAAAAAABpAP//AQAFAAAAAABpAAAAAQAFAAAAAABpAAEAAQACAAIAAABqAP7/AQACAAAAAABqAP//AQACAAEAAABqAAAAAQACAAIAAAB3APz/AQAAAAAAAAB4APz/AQABAAAAAAB5APz/AQABAAAAAAB6APz/AQABAAAAAAB7APz/AQADAAIAAAB8APz/AQAFAAAAAAB9APz/AQAFAAAAAAB2AP3/AQAAAAAAAAB3AP3/AQABAAAAAAB4AP3/AQABAAAAAAB5AP3/AQABAAAAAAB6AP3/AQADAAIAAAB7AP3/AQAFAAAAAAB8AP3/AQAFAAAAAAB6APv/AQAAAAAAAAB7APv/AQABAAAAAAB8APv/AQABAAAAAAB9APv/AQABAAAAAAB+APv/AQADAAIAAAB/APv/AQAFAAAAAACAAPv/AQAFAAAAAAB+APb/AQAFAAAAAAB+APf/AQAFAAAAAAB+APj/AQAFAAAAAAB+APn/AQAFAAAAAAB+APr/AQAFAAAAAAB/APb/AQAFAAAAAAB/APf/AQAFAAAAAAB/APj/AQAFAAAAAAB/APn/AQAFAAAAAAB/APr/AQAFAAAAAACAAPb/AQAFAAAAAACAAPf/AQAFAAAAAACAAPj/AQAFAAAAAACAAPn/AQAFAAAAAACAAPr/AQAFAAAAAAB9AP3/AQAFAAAAAAB+AP3/AQAFAAAAAAB/AP3/AQAFAAAAAACAAP3/AQAFAAAAAAB+APz/AQAFAAAAAAB/APz/AQAFAAAAAACAAPz/AQAFAAAAAAB+APL/AQAFAAAAAAB+APP/AQAFAAAAAAB+APT/AQAFAAAAAAB+APX/AQAFAAAAAAB/APL/AQAFAAAAAAB/APP/AQAFAAAAAAB/APT/AQAFAAAAAAB/APX/AQAFAAAAAACAAPL/AQAFAAAAAACAAPP/AQAFAAAAAACAAPT/AQAFAAAAAACAAPX/AQAFAAAAAAB1APb/AQAAAAAAAAB1APf/AQAAAAIAAAB2APb/AQABAAAAAAB2APf/AQABAAIAAAB3APb/AQACAAAAAAB3APf/AQACAAIAAAB9APj/AQAAAAAAAAB9APn/AQAAAAIAAAB6APb/AQAFAAIAAABvAPD/AQAFAAAAAABvAPH/AQAFAAAAAABwAPH/AQAFAAAAAABwAPL/AQAFAAAAAABxAPP/AQAFAAAAAABxAPT/AQAFAAAAAAByAPT/AQAFAAAAAAByAPX/AQAFAAAAAAByAPb/AQACAAIAAABvAO7/AQABAAAAAABvAO//AQAFAAAAAABvAPL/AQAFAAAAAABvAPP/AQAFAAAAAABvAPT/AQAFAAAAAABvAPX/AQAFAAAAAABvAPb/AQAAAAIAAABwAO7/AQABAAAAAABwAO//AQAFAAAAAABwAPD/AQAFAAAAAABwAPP/AQAFAAAAAABwAPT/AQAFAAAAAABwAPX/AQAFAAAAAABwAPb/AQAFAAAAAABxAO7/AQABAAAAAABxAO//AQAFAAAAAABxAPD/AQAFAAAAAABxAPH/AQAFAAAAAABxAPL/AQAFAAAAAABxAPX/AQAFAAAAAABxAPb/AQAFAAAAAAByAPD/AQAFAAAAAAByAPH/AQAFAAAAAAByAPL/AQAFAAAAAAByAPP/AQAFAAAAAABzAPP/AQACAAAAAABzAPT/AQACAAIAAAB3APH/AQAFAAIAAAB6APD/AQAFAAIAAACLAPH/AQAFAAAAAACMAO3/AQAFAAAAAACMAO7/AQAFAAAAAACMAO//AQAFAAAAAACMAPD/AQAFAAAAAACMAPH/AQAFAAAAAACNAO3/AQAFAAAAAACNAO7/AQAFAAAAAACNAO//AQAFAAAAAACNAPD/AQAFAAAAAACNAPH/AQAFAAAAAACOAO3/AQAFAAAAAACOAO7/AQAFAAAAAACOAO//AQAFAAAAAACOAPD/AQAFAAAAAACOAPH/AQAFAAAAAACLAPL/AQAFAAAAAACLAPP/AQAFAAAAAACLAPT/AQAFAAAAAACLAPX/AQAFAAAAAACLAPb/AQAAAAIAAACMAPL/AQAFAAAAAACMAPP/AQAFAAAAAACMAPT/AQAFAAAAAACMAPX/AQAFAAAAAACMAPb/AQAFAAAAAACNAPL/AQAFAAAAAACNAPP/AQAFAAAAAACNAPT/AQAFAAAAAACNAPX/AQAFAAAAAACNAPb/AQAFAAAAAACOAPL/AQAFAAAAAACOAPP/AQAFAAAAAACOAPT/AQAFAAAAAACOAPX/AQAFAAAAAACOAPb/AQACAAIAAACBAPj/AQABAAAAAACBAPn/AQAFAAAAAACCAPj/AQABAAAAAACCAPn/AQAFAAAAAACDAPj/AQABAAAAAACDAPn/AQAFAAAAAACEAPj/AQABAAAAAACEAPn/AQAFAAAAAACFAPj/AQABAAAAAACFAPn/AQAFAAAAAACGAPj/AQABAAAAAACGAPn/AQAFAAAAAACHAPj/AQACAAAAAACHAPn/AQAFAAAAAACBAPr/AQAFAAAAAACBAPv/AQAFAAAAAACBAPz/AQAFAAAAAACBAP3/AQAFAAAAAACCAPr/AQAFAAAAAACCAPv/AQAFAAAAAACCAPz/AQAFAAAAAACCAP3/AQAFAAAAAACDAPr/AQAFAAAAAACDAPv/AQAFAAAAAACDAPz/AQAFAAAAAACDAP3/AQAFAAAAAACEAPr/AQAFAAAAAACEAPv/AQAFAAAAAACEAPz/AQAFAAAAAACEAP3/AQAFAAAAAACFAPr/AQAFAAAAAACFAPv/AQAFAAAAAACFAPz/AQAFAAAAAACFAP3/AQAFAAAAAACGAPr/AQAFAAAAAACGAPv/AQAFAAAAAACGAPz/AQAFAAAAAACGAP3/AQAFAAAAAACHAPr/AQABAAAAAACHAPv/AQAFAAAAAACHAPz/AQAFAAAAAACHAP3/AQAFAAAAAACIAPr/AQABAAAAAACIAPv/AQAFAAAAAACIAPz/AQAFAAAAAACIAP3/AQAFAAAAAACJAPr/AQABAAAAAACJAPv/AQAFAAAAAACJAPz/AQAFAAAAAACJAP3/AQAFAAAAAACKAPr/AQACAAAAAACKAPv/AQAFAAAAAACKAPz/AQAFAAAAAACKAP3/AQAFAAAAAACLAPv/AQABAAAAAACLAPz/AQAFAAAAAACLAP3/AQAFAAAAAACMAPv/AQABAAAAAACMAPz/AQAFAAAAAACMAP3/AQAFAAAAAACNAPv/AQACAAAAAACNAPz/AQABAAAAAACNAP3/AQAFAAAAAACOAPz/AQABAAAAAACOAP3/AQAFAAAAAACPAPz/AQACAAAAAACPAP3/AQAFAAAAAAByAO7/AQACAAAAAAByAO//AQAFAAAAAABoAO7/AQABAAAAAABpAO7/AQABAAAAAABqAO7/AQABAAAAAABrAO7/AQABAAAAAABsAO7/AQABAAAAAABtAO7/AQABAAAAAABuAO7/AQABAAAAAABoAO//AQAFAAAAAABoAPD/AQAFAAAAAABoAPH/AQAAAAIAAABpAO//AQAFAAAAAABpAPD/AQAFAAAAAABpAPH/AQAFAAAAAABqAO//AQAFAAAAAABqAPD/AQAFAAAAAABqAPH/AQAFAAAAAABrAO//AQAFAAAAAABrAPD/AQAFAAAAAABrAPH/AQAFAAAAAABsAO//AQAFAAAAAABsAPD/AQAFAAAAAABsAPH/AQAFAAAAAABtAO//AQAFAAAAAABtAPD/AQAFAAAAAABtAPH/AQAFAAAAAABuAO//AQAFAAAAAABuAPD/AQAFAAAAAABuAPH/AQAFAAAAAABiAOv/AQAFAAAAAABiAOz/AQAFAAAAAABiAO3/AQAFAAAAAABiAO7/AQAFAAAAAABiAO//AQAFAAAAAABiAPD/AQAFAAAAAABiAPH/AQAFAAAAAABiAPL/AQAFAAAAAABiAPP/AQAAAAIAAABjAOv/AQAFAAAAAABjAOz/AQAFAAAAAABjAO3/AQAFAAAAAABjAO7/AQAFAAAAAABjAO//AQAFAAAAAABjAPD/AQAFAAAAAABjAPH/AQAFAAAAAABjAPL/AQAFAAAAAABjAPP/AQAFAAAAAABkAOv/AQAFAAAAAABkAOz/AQAFAAAAAABkAO3/AQAFAAAAAABkAO7/AQAFAAAAAABkAO//AQAFAAAAAABkAPD/AQAFAAAAAABkAPH/AQAFAAAAAABkAPL/AQAFAAAAAABkAPP/AQACAAIAAABiAOf/AQAFAAAAAABiAOj/AQAFAAAAAABiAOn/AQAFAAAAAABiAOr/AQAFAAAAAABjAOf/AQAFAAAAAABjAOj/AQAFAAAAAABjAOn/AQAFAAAAAABjAOr/AQAFAAAAAABkAOf/AQAFAAAAAABkAOj/AQAFAAAAAABkAOn/AQAFAAAAAABkAOr/AQAFAAAAAACDAOL/AQAFAAAAAACDAOP/AQAFAAAAAACDAOT/AQAFAAAAAACDAOX/AQAFAAAAAACDAOb/AQAFAAAAAACDAOf/AQAFAAAAAACDAOj/AQAFAAAAAACDAOn/AQAAAAIAAACEAOL/AQAFAAAAAACEAOP/AQAFAAAAAACEAOT/AQAFAAAAAACEAOX/AQAFAAAAAACEAOb/AQAFAAAAAACEAOf/AQAFAAAAAACEAOj/AQAFAAAAAACEAOn/AQAFAAAAAACFAOL/AQAFAAAAAACFAOP/AQAFAAAAAACFAOT/AQAFAAAAAACFAOX/AQAFAAAAAACFAOb/AQAFAAAAAACFAOf/AQAFAAAAAACFAOj/AQAFAAAAAACFAOn/AQAFAAAAAACGAOL/AQAFAAAAAACGAOP/AQAFAAAAAACGAOT/AQAFAAAAAACGAOX/AQAFAAAAAACGAOb/AQAFAAAAAACGAOf/AQAFAAAAAACGAOj/AQAFAAAAAACGAOn/AQAFAAAAAACHAOL/AQAFAAAAAACHAOP/AQAFAAAAAACHAOT/AQAFAAAAAACHAOX/AQAFAAAAAACHAOb/AQAFAAAAAACHAOf/AQAFAAAAAACHAOj/AQAFAAAAAACHAOn/AQAFAAAAAACIAOL/AQAFAAAAAACIAOP/AQAFAAAAAACIAOT/AQAFAAAAAACIAOX/AQAFAAAAAACIAOb/AQAFAAAAAACIAOf/AQAFAAAAAACIAOj/AQAFAAAAAACIAOn/AQAFAAAAAACJAOL/AQAFAAAAAACJAOP/AQAFAAAAAACJAOT/AQAFAAAAAACJAOX/AQAFAAAAAACJAOb/AQAFAAAAAACJAOf/AQAFAAAAAACJAOj/AQAFAAAAAACJAOn/AQAFAAAAAACKAOL/AQAFAAAAAACKAOP/AQAFAAAAAACKAOT/AQAFAAAAAACKAOX/AQAFAAAAAACKAOb/AQAFAAAAAACKAOf/AQAFAAAAAACKAOj/AQAFAAAAAACKAOn/AQAFAAAAAACLAOL/AQAFAAAAAACLAOP/AQAFAAAAAACLAOT/AQAFAAAAAACLAOX/AQAFAAAAAACLAOb/AQAFAAAAAACLAOf/AQAFAAAAAACLAOj/AQAFAAAAAACLAOn/AQAFAAAAAACMAOL/AQAFAAAAAACMAOP/AQAFAAAAAACMAOT/AQAFAAAAAACMAOX/AQAFAAAAAACMAOb/AQAFAAAAAACMAOf/AQAFAAAAAACMAOj/AQAFAAAAAACMAOn/AQAFAAAAAACNAOL/AQAFAAAAAACNAOP/AQAFAAAAAACNAOT/AQAFAAAAAACNAOX/AQAFAAAAAACNAOb/AQAFAAAAAACNAOf/AQAFAAAAAACNAOj/AQAFAAAAAACNAOn/AQAFAAAAAACOAOL/AQAFAAAAAACOAOP/AQAFAAAAAACOAOT/AQAFAAAAAACOAOX/AQAFAAAAAACOAOb/AQAFAAAAAACOAOf/AQAFAAAAAACOAOj/AQAFAAAAAACOAOn/AQAFAAAAAACDAN//AQAFAAAAAACDAOD/AQAFAAAAAACDAOH/AQAFAAAAAACEAN//AQAFAAAAAACEAOD/AQAFAAAAAACEAOH/AQAFAAAAAACFAN//AQAFAAAAAACFAOD/AQAFAAAAAACFAOH/AQAFAAAAAACGAN//AQAFAAAAAACGAOD/AQAFAAAAAACGAOH/AQAFAAAAAACHAN//AQAFAAAAAACHAOD/AQAFAAAAAACHAOH/AQAFAAAAAACIAN//AQAFAAAAAACIAOD/AQAFAAAAAACIAOH/AQAFAAAAAACJAN//AQAFAAAAAACJAOD/AQAFAAAAAACJAOH/AQAFAAAAAACKAN//AQAFAAAAAACKAOD/AQAFAAAAAACKAOH/AQAFAAAAAACLAN//AQAFAAAAAACLAOD/AQAFAAAAAACLAOH/AQAFAAAAAACMAN//AQAFAAAAAACMAOD/AQAFAAAAAACMAOH/AQAFAAAAAACNAN//AQAFAAAAAACNAOD/AQAFAAAAAACNAOH/AQAFAAAAAACOAN//AQAFAAAAAACOAOD/AQAFAAAAAACOAOH/AQAFAAAAAAB9AO//AQAAAAIAAAB+AO//AQAFAAAAAAB/AO//AQAFAAAAAACAAO//AQAFAAAAAACBAO//AQAFAAAAAACCAO//AQAFAAAAAACDAO//AQAFAAAAAACEAO//AQAFAAAAAACFAO//AQAFAAAAAACGAO//AQAFAAAAAACHAO//AQAFAAAAAACIAO//AQACAAIAAAB9AO3/AQAAAAAAAAB9AO7/AQAAAAEAAAB+AO3/AQABAAAAAAB+AO7/AQAFAAAAAAB/AO3/AQABAAAAAAB/AO7/AQAFAAAAAACAAO3/AQABAAAAAACAAO7/AQAFAAAAAACBAO3/AQABAAAAAACBAO7/AQAFAAAAAACCAO3/AQABAAAAAACCAO7/AQAFAAAAAACDAO3/AQABAAAAAACDAO7/AQAFAAAAAACEAO3/AQABAAAAAACEAO7/AQAFAAAAAACFAO3/AQABAAAAAACFAO7/AQAFAAAAAACGAO3/AQABAAAAAACGAO7/AQAFAAAAAACHAO3/AQABAAAAAACIAO3/AQABAAAAAACDAPT/AQAAAAIAAACEAPT/AQAFAAAAAACFAPT/AQAFAAAAAACGAPT/AQAFAAAAAACHAPT/AQAFAAAAAACIAPT/AQAFAAAAAACJAPT/AQAFAAAAAACKAPT/AQAFAAAAAACDAPP/AQABAAAAAACEAPP/AQABAAAAAACFAPP/AQABAAAAAACGAPP/AQABAAAAAACHAPP/AQABAAAAAACIAPP/AQABAAAAAACJAPP/AQABAAAAAACKAPP/AQABAAAAAACMAOr/AQAFAAAAAACMAOv/AQAFAAAAAACMAOz/AQAFAAAAAACNAOz/AQAFAAAAAACNAOv/AQAFAAAAAACOAOv/AQAFAAAAAACOAOr/AQAFAAAAAACNAOr/AQAFAAAAAACOAOz/AQAFAAAAAACLAOr/AQAFAAAAAACIAO7/AQACAAEAAACHAO7/AQAFAAAAAACLAOv/AQAFAAAAAACLAOz/AQAFAAAAAACLAO3/AQAFAAAAAACLAO7/AQAFAAAAAACLAO//AQAFAAAAAACLAPD/AQAFAAAAAAB+APD/AQAFAAAAAAB+APH/AQAFAAAAAAB/APH/AQAFAAAAAACAAPH/AQAFAAAAAACAAPD/AQAFAAAAAAB/APD/AQAFAAAAAACKAPX/AQAAAAIAAACiAP7/AQAAAAAAAACjAP7/AQABAAAAAACkAP7/AQABAAAAAAClAP7/AQABAAAAAACmAP7/AQABAAAAAACnAP7/AQABAAAAAACoAP7/AQABAAAAAACpAP7/AQABAAAAAACqAP7/AQABAAAAAACrAP7/AQABAAAAAACsAP7/AQABAAAAAACtAP7/AQACAAAAAACiAP//AQAAAAEAAACtAP//AQACAAEAAACjAAAAAQAAAAIAAACkAAEAAQAAAAIAAAClAAIAAQAAAAIAAACmAAMAAQAAAAIAAACsAAAAAQACAAIAAACrAAEAAQACAAIAAACqAAIAAQACAAIAAACpAAMAAQACAAIAAACnAAMAAQABAAIAAACoAAMAAQABAAIAAACmAAIAAQAFAAAAAACnAAIAAQAFAAAAAACoAAIAAQAFAAAAAACpAAIAAQAFAAAAAACpAAEAAQAFAAAAAACpAAAAAQAFAAAAAACpAP//AQAFAAAAAACoAP//AQAFAAAAAACnAP//AQAFAAAAAACmAP//AQAFAAAAAACmAAAAAQAFAAAAAACmAAEAAQAFAAAAAACnAAEAAQAFAAAAAACoAAEAAQAFAAAAAACoAAAAAQAFAAAAAACnAAAAAQAFAAAAAAClAAEAAQAFAAAAAAClAAAAAQAFAAAAAAClAP//AQAFAAAAAACkAP//AQAFAAAAAACjAP//AQAFAAAAAACkAAAAAQAFAAAAAACqAP//AQAFAAAAAACqAAAAAQAFAAAAAACqAAEAAQAFAAAAAACrAAAAAQAFAAAAAACrAP//AQAFAAAAAACsAP//AQAFAAAAAAA=")
tile_set = ExtResource("1_vwha4")

[node name="Porta" parent="Background" instance=ExtResource("3_d23nn")]
position = Vector2(2656, -134)

[node name="Parallex" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Parallex"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallex/ParallaxBackground"]
position = Vector2(253, -92)
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex/ParallaxBackground/ParallaxLayer"]
scale = Vector2(3, 3)
texture = ExtResource("2_hty5q")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Parallex/ParallaxBackground"]
position = Vector2(253, -92)
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex/ParallaxBackground/ParallaxLayer2"]
position = Vector2(160, -30)
scale = Vector2(2, 2)
texture = ExtResource("3_10ool")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Parallex/ParallaxBackground"]
position = Vector2(253, -92)
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex/ParallaxBackground/ParallaxLayer3"]
position = Vector2(160, -30)
scale = Vector2(2, 2)
texture = ExtResource("4_lbqu7")

[node name="Plataformas" type="Node" parent="."]

[node name="Button1" parent="Plataformas" instance=ExtResource("6_pcseb")]
position = Vector2(869, -109)
scale = Vector2(2, 2)

[node name="Button2" parent="Plataformas" instance=ExtResource("7_tls5i")]
position = Vector2(1647, -109)
scale = Vector2(2, 2)

[node name="Plataforma" parent="Plataformas" instance=ExtResource("5_10ool")]
position = Vector2(374, -72)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plataformas/Plataforma"]
libraries = {
&"": SubResource("AnimationLibrary_2jl5j")
}
autoplay = "move"

[node name="Plataforma2" parent="Plataformas" instance=ExtResource("5_10ool")]
position = Vector2(691, -89)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plataformas/Plataforma2"]
libraries = {
&"": SubResource("AnimationLibrary_e2quh")
}
autoplay = "move"

[node name="Plataforma3" parent="Plataformas" instance=ExtResource("5_10ool")]
position = Vector2(930, -88)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plataformas/Plataforma3"]
libraries = {
&"": SubResource("AnimationLibrary_078h2")
}

[node name="Plataforma4" parent="Plataformas" instance=ExtResource("5_10ool")]
position = Vector2(1717, -88)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plataformas/Plataforma4"]
libraries = {
&"": SubResource("AnimationLibrary_01pxa")
}

[node name="Checkpoints" type="Node" parent="."]

[node name="Checkpoint" parent="Checkpoints" instance=ExtResource("6_lbqu7")]
position = Vector2(794, -138)

[node name="Checkpoint2" parent="Checkpoints" instance=ExtResource("6_lbqu7")]
position = Vector2(1554, -146)

[node name="DeathZone" parent="." instance=ExtResource("7_1mpln")]
position = Vector2(-31, -73)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("WorldBoundaryShape2D_ln7h6")

[node name="Player" parent="." instance=ExtResource("8_ln7h6")]
z_index = 1
position = Vector2(137, -116)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(-137, 116)
stream = ExtResource("12_2jl5j")
autoplay = true

[connection signal="plataforma" from="Plataformas/Button1" to="." method="_on_button_1_plataforma"]
[connection signal="plataforma2" from="Plataformas/Button2" to="." method="_on_button_2_plataforma_2"]
[connection signal="animation_finished" from="Plataformas/Plataforma3/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Plataformas/Plataforma4/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="Player/AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
